<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.storedobject</groupId>
    <artifactId>so-development</artifactId>
    <version>13.0.4</version>

    <properties>
        <vaadin.version>24.6.6</vaadin.version>
        <so-common-version>5.1.2</so-common-version>
        <so-components-version>12.0.5</so-components-version>
        <so-charts-version>4.0.0</so-charts-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java-version>21</java-version>
        <maven.compiler.release>21</maven.compiler.release>
        <maven-compiler-plugin-version>3.14.0</maven-compiler-plugin-version>
        <maven-jar-plugin-version>3.4.2</maven-jar-plugin-version>
        <maven-war-plugin-version>3.4.0</maven-war-plugin-version>
        <maven-resources-plugin-version>3.3.1</maven-resources-plugin-version>
        <maven-javadoc-plugin-version>3.11.2</maven-javadoc-plugin-version>
        <maven-source-plugin-version>3.3.1</maven-source-plugin-version>
        <maven-assembly-plugin-version>3.7.1</maven-assembly-plugin-version>
        <guava-version>33.3.0-jre</guava-version>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <drivers.downloader.phase>pre-integration-test</drivers.downloader.phase>

    </properties>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>SO Development skeleton classes</description>
    <url>https://github.com/syampillai/SODevelopment</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Syam Pillai</name>
            <email>syam@engravgroup.com</email>
            <organization>Syam Pillai</organization>
            <organizationUrl>https://github.com/syampillai</organizationUrl>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>Vaadin Directory</id>
            <url>https://maven.vaadin.com/vaadin-addons</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${vaadin.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Java Servlet -->
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- JWT Support -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.12.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>

        <!-- PostgreSQL JDBC -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.4</version>
        </dependency>

        <!-- AI LLM models interface -->
        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j-core</artifactId>
            <version>0.36.2</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j</artifactId>
            <version>0.36.2</version>
            <type>pom</type>
        </dependency>

        <!-- Java mail -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- SO Common (from jitpack) -->
        <dependency>
            <groupId>com.github.syampillai</groupId>
            <artifactId>SOCommon</artifactId>
            <version>${so-common-version}</version>
        </dependency>

        <!-- Vaadin -->
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.vaadin</groupId>
                    <artifactId>hilla-dev</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Open Source SO Components -->
        <dependency>
            <groupId>com.storedobject.vaadin</groupId>
            <artifactId>so-components</artifactId>
            <version>${so-components-version}</version>
        </dependency>

        <!-- Open Source SO Charts -->
        <dependency>
            <groupId>com.storedobject.chart</groupId>
            <artifactId>so-charts</artifactId>
            <version>${so-charts-version}</version>
        </dependency>

        <!-- Vaadin add-on for Full Calendar -->
        <dependency>
            <groupId>org.vaadin.stefan</groupId>
            <artifactId>fullcalendar2</artifactId>
            <version>6.2.2</version>
        </dependency>

        <!-- Vaadin add-on for HTML Table -->
        <dependency>
            <groupId>org.vaadin.stefan</groupId>
            <artifactId>html-table</artifactId>
            <version>1.2.0</version>
        </dependency>

        <!-- Java Servlet -->

        <!-- POI APIs for Excel interface -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.3.0</version>
        </dependency>

        <!-- MQTT for IOT -->
        <dependency>
            <groupId>org.geckoprojects.messaging</groupId>
            <artifactId>org.eclipse.paho.mqttv5.client</artifactId>
            <version>1.2.7</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- JFree Chart  -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.5</version>
        </dependency>

    </dependencies>

    <scm>
        <connection>scm:git:git://github.com/syampillai/SODevelopment.git</connection>
        <developerConnection>scm:git:ssh://github.com/syampillai/SODevelopment.git</developerConnection>
        <url>https://github.com/syampillai/SODevelopment/tree/master</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Syam Pillai</name>
            <url>https://maven.pkg.github.com/syampillai/SODevelopment</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>

            <!-- Compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin-version}</version>
                <configuration>
                    <release>${java-version}</release>
                </configuration>
            </plugin>

            <!-- Create jar file -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin-version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- Resources plug-in -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin-version}</version>
            </plugin>

        </plugins>
    </build>

</project>
